terraform/modules/vpc/route-tables.tf
#############################################
# Public Route Table
#############################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id
  }

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-public-rt"
    }
  )
}

#############################################
# Public Route Table Associations
#############################################

resource "aws_route_table_association" "public" {

  for_each = aws_subnet.public

  subnet_id = each.value.id

  route_table_id = aws_route_table.public.id
}

#############################################
# Private Route Table
#############################################

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id

  dynamic "route" {

    for_each = var.enable_nat_gateway ? [1] : []

    content {

      cidr_block = "0.0.0.0/0"

      nat_gateway_id = aws_nat_gateway.this[0].id
    }
  }

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-private-rt"
    }
  )
}

#############################################
# Private Route Table Associations
#############################################

resource "aws_route_table_association" "private" {

  for_each = aws_subnet.private

  subnet_id = each.value.id

  route_table_id = aws_route_table.private.id
}
